Adds dummy routes;
